# unlimited-messaging-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  openapi.yaml  regenerate-sdks.sh
.claude/commands/: publish.md
.github/workflows/: README.md  _discord_notif.yml  _publish-n8n.sh  _publish-python.sh  _publish-typescript.sh  release.yml
credentials/: UnlimitedMessagingApi.credentials.ts
examples/python/: README.md  list_messages.py  list_sims.py  requirements.txt  send_message.py
examples/python/src/: list_messages.py  list_sims.py  send_message.py
examples/typescript/: README.md  list-messages.ts  list-sims.ts  package-lock.json  package.json  pnpm-lock.yaml  send-message.ts
examples/typescript/src/: list-messages.ts  list-sims.ts  send-message.ts
fern/: fern.config.json  generators.yml
scripts/: typescript-package.json
sdk/n8n/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
sdk/n8n/credentials/: UnlimitedMessagingApi.credentials.ts
sdk/python/: README.md  __init__.py  environment.py  pyproject.toml
sdk/python/message/types/: __init__.py  message_controller_find_all_request_status.py  message_controller_find_all_response.py  message_controller_find_all_response_data_item.py  message_controller_find_all_response_data_item_direction.py  message_controller_find_all_response_data_item_status.py  message_controller_send_response_direction.py  message_controller_send_response_status.py
sdk/python/sim/types/: sim_controller_get_linked_sims_response_item.py
sdk/python/tests/: conftest.py  test_message.py
sdk/python/unlimited_messaging/: __init__.py  client.py  environment.py
sdk/python/unlimited_messaging/message/: __init__.py  client.py
sdk/python/unlimited_messaging/message/types/: __init__.py  message_controller_find_one_response.py  message_controller_find_one_response_direction.py  message_controller_find_one_response_status.py  message_find_all_request_status.py  message_find_all_response.py  message_find_all_response_data_item.py  message_find_all_response_data_item_direction.py  message_find_all_response_data_item_status.py  message_find_one_response.py  message_find_one_response_direction.py  message_find_one_response_status.py  message_send_response.py  message_send_response_direction.py  message_send_response_status.py
sdk/python/unlimited_messaging/sim/: __init__.py  client.py
sdk/python/unlimited_messaging/sim/types/: __init__.py  sim_controller_get_linked_sims_response_item.py  sim_get_linked_sims_response_item.py
sdk/python/unlimited_messaging/tests/: test_message.py  test_sim.py
sdk/typescript/: Client.d.ts  Client.js  README.md  environments.d.ts  environments.js  index.d.ts  index.js  package-lock.json  package.json
sdk/typescript/errors/: UnlimitedMessagingApiError.js  index.d.ts  index.js
sdk/typescript/src/: Client.d.ts  environments.d.ts  index.js  (+1 more)
sdk/unlimited_messaging.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+148 files in other folders)
