[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "unlimited-messaging"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unlimited_messaging*"]
