[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "unlimited-messaging"
version = "0.1.2"
description = "Python SDK for the Unlimited Messaging API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://unlimitedmessaging.app"
Documentation = "https://docs.unlimitedmessaging.app"
Dashboard = "https://app.unlimitedmessaging.app"
Repository = "https://github.com/unlimitedmessaging/unlimited-messaging-sdk"
Issues = "https://github.com/unlimitedmessaging/unlimited-messaging-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["unlimited_messaging*"]
