[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "unlimited-messaging"
version = "0.1.3"
description = "Python SDK for the Unlimited Messaging API — send and receive WhatsApp messages programmatically"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ilian", email = "ilian572@gmail.com" }
]
keywords = [
    "whatsapp",
    "messaging",
    "sms",
    "api",
    "sdk",
    "client",
    "whatsapp-api",
    "send-message",
    "unlimited-messaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://unlimitedmessaging.app"
Documentation = "https://docs.unlimitedmessaging.app"
Dashboard = "https://app.unlimitedmessaging.app"
Repository = "https://github.com/UnlimitedMessaging/unlimited-messaging-sdk"
Issues = "https://github.com/UnlimitedMessaging/unlimited-messaging-sdk/issues"
Changelog = "https://github.com/UnlimitedMessaging/unlimited-messaging-sdk/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["unlimited_messaging*"]
